package com.example.tptdl.gamelogic.tokens

class Banana : Fruit {
    val pointValue = 25

    override fun toString() : String {
        return "Banana"
    }
}