package com.example.tptdl.gamelogic.tokens

interface Token {
    override fun toString(): String
}