package com.example.tptdl.weatherAPI

class Cold {
}