package com.example.tptdl.weatherAPI

class Heat {
}