package com.example.tptdl.weatherAPI

class Normal : WeatherState {

    override fun toString() : String {
        return "Normal"
    }

}