package com.example.tptdl.weatherAPI

class Storm {
}