package com.example.tptdl.weatherAPI

interface WeatherState {
    override fun toString() : String
}