package com.example.tptdl.weatherAPI

class Wind {
}